[build-system]
requires = ["setuptools >= 63", "setuptools_scm[toml] >= 6.2", "Cython >= 0.29.20"]
build-backend = "setuptools.build_meta"

[project]
name = "salty"
authors = [
    {name = "Liam Cheney", email = "liam.cheney1@gmail.com"}
]
description = "In silico lineage typing of Staphylococcus aureus."
readme = "README.md"
license = {text = "GPLv3"}
classifiers = [
    'License :: OSI Approved :: GPLv3',
    'Programming Language :: Python :: 3.7',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
    'Intended Audience :: Science/Research'
]
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "pandas >= 1.5.0",
    "kma >= 1.4.9",
]

[project.urls]
"Homepage" = "https://github.com/LanLab/salty"

[project.scripts]
salty = "salty.salty:main"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
testpaths = ["tests"]
xfail_strict = true

[tool.mypy]
warn_unused_configs = true

[tool.cibuildwheel]
environment = "CFLAGS=-g0"
test-extras = ["dev"]
test-command = ["pytest {project}"]
